infrastructure/controllers/base/traefik/dashboard-auth-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
spec:
  basicAuth:
    secret: traefik-dashboard-users
