infrastructure/controllers/base/traefik/dashboard-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-api
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-dashboard-auth@kubernetescrd
spec:
  rules:
    - host: dashboard.traefik.philipkrueck.com
      http:
        paths:
          - backend:
              service:
                name: traefik-dashboard
                port:
                  number: 8080
            path: /api/
            pathType: Prefix
