infrastructure/controllers/base/traefik/dashboard-ingress-route-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host("dashboard.traefik.philipkrueck.com")
      services:
        - name: traefik-dashboard
          port: 8080
      middlewares:
        - name: redirect-https
